# labnotes

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  clean_digest.json  daily-run.sh  exec.sh  pyproject.toml  scrape_auctions.ipynb
.github/instructions/: general.instructions.md
.github/workflows/: ci.yml
app/: digest.py  feeds.yaml  keywords.json  opml_to_yaml.py
app/templates/: text.txt.j2
labnotes/: __init__.py  aria_padana.py  collect.py  deduplicate.py  digest.py  embeddings.py  opml_to_yaml.py  post.py  schemas.py  scoring.py  scraping.py  settings.py  similarity.py  slack.py  summarise.py  utils.py
labnotes/data/: collect_summaries.txt  feeds.yaml  keywords.json  other_feeds.yaml  summarisation.txt
labnotes/prompts/: collect_summaries.txt  summarisation.txt  summarise_enrich.txt
labnotes/scraping_tools/: escape_cookie_banner.py  utils.py
labnotes/scraping_tools/llm/: openai_utils.py
labnotes/scripts/: exec_mountainmap.sh  exec_website.sh
labnotes/scripts/knowledge_base/: README.md  curate_knowledge_base.py  extract_chats.py
labnotes/settings/: base_settings.yaml  settings.yaml
labnotes/settings/mountainmap/: feeds.yaml  keywords.json
labnotes/settings/website/: feeds.yaml  keywords.json
labnotes/templates/: markdown.md.j2
labnotes/tools/: __init__.py  io.py  utils.py
