[project]
name = "labnotes"
version = "0.1.0"
description = "Daily AI digest: fetch RSS/Atom, score, rank, and output Markdown/JSON."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "feedparser==6.0.11",
  "jinja2>=3.1.3",
  "requests>=2.31.0",
  "pyyaml>=6.0.1",
  "beautifulsoup4>=4.12.0",
  "aiohttp>=3.9.0",
  "aiofiles>=23.2.0",
  "firecrawl-py>=0.0.16",
  "newspaper3k>=0.2.8",
  "lxml-html-clean>=0.1.0",
  "numpy>=2.2.6",
  "litellm>=1.40.0",
  "supabase>=2.18.1",
  "dynaconf>=3.2.11",
  "firecrawl>=4.3.1",
  "trafilatura>=1.6.0",
  "pillow>=10.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[[tool.uv.index]]
url = "https://pypi.org/simple"   # PyPI
default = true          

[tool.uv]
package = true
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
]

[tool.euv]
# Example configuration for euv (edit as needed)
include = ["src/backend"]
exclude = ["tests"]

[project.scripts]
labnotes = "labnotes.digest:main"
labnotes-dedup = "labnotes.deduplicate:main"
labnotes-summarise = "labnotes.summarise:main"
labnotes-collect = "labnotes.collect:main"
labnotes-post = "labnotes.post:main"
labnotes-aria-padana = "labnotes.aria_padana:main"
labnotes-aria-padana-post = "labnotes.aria_padana:post_main"

[tool.setuptools.packages.find]
where = ["."]
include = ["labnotes*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["zenvi_development"]
